--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,24 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "friendsofsymfony/rest-bundle": "^3.5",
         "jms/serializer-bundle": "^5.2",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpstan/phpdoc-parser": "^1.18",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.48",
+        "symfony/property-access": "6.0.*",
+        "symfony/property-info": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/serializer": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "config": {
