--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.18",
         "sensio/framework-extra-bundle": "^6.2",
+        "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
@@ -25,6 +26,7 @@
         "symfony/property-info": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/serializer": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "config": {
