--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -3,6 +3,7 @@ fos_rest:
     format_listener:
         rules:
             - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
+            - { path: '^/', priorities: [ 'html', '*/*'], fallback_format: ~, prefer_extension: true }
 #    param_fetcher_listener:  true
 #    allowed_methods_listener:  true
     routing_loader: false
