--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,15 @@
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.48",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/security-csrf": "6.0.*",
         "symfony/serializer": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
